tests/smoothy/iter/snapshots/smoothy__iter__none_match__fails__when_all_elements_match.snap
---
source: tests/smoothy/iter/none_match.rs
expression: assertion_failed_output
---
[31mAssertion failed![0m

Expected
  [31m[2, 4, 6, 8][0m
to have no elements matching the predicate
but found elements that matched
  [32m[2, 4, 6, 8][0m
